Ahora el titula del informe esta centrado

--- a/src/Informe.ipynb
+++ b/src/Informe.ipynb
@@ -5,9 +5,11 @@
    "id": "64186e21-55f1-4ff6-a7da-780c8c5bcbb8",
    "metadata": {},
    "source": [
-    "Informe Estructura de Datos:\n",
+    "<h1 style=\"text-align:center;\">Informe Estructura de Datos</h1>\n",
     "\n",
-    "Grupo 4. \n",
+    "---\n",
+    "\n",
+    "Grupo 4.\n",
     "\n",
     "Integrantes:\n",
     "\n",
@@ -36,15 +38,9 @@
    "id": "fb1f5fb7-ebee-4125-91ec-e3a212d24385",
    "metadata": {},
    "source": [
-    "_DIAGRAMA DE CLASES_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9429813-cd66-4f38-a359-661582181c61",
-   "metadata": {},
-   "source": [
-    "https://drive.google.com/file/d/1q1NZr0pBG_p8Oog9_iIxb2jVwRVo1si7/view?usp=sharing"
+    "_DIAGRAMA DE CLASES_\n",
+    "\n",
+    "[https://drive.google.com/file/d/1q1NZr0pBG_p8Oog9_iIxb2jVwRVo1si7/view?usp=sharing](https://drive.google.com/file/d/1q1NZr0pBG_p8Oog9_iIxb2jVwRVo1si7/view?usp=sharing)"
    ]
   },
   {
@@ -184,15 +180,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " query = 'bitcoin OR crypto OR \"blockchain\"'\n",
-    "            query2 = '\"ethereum\" OR \"dogecoin\" OR \"cardano\"'\n",
-    "            query3 = '\"DOGE\" OR \"XRP\"'\n",
-    "            query4 = 'BTC OR ETH'\n",
-    "            filters = '(lang:es OR lang:en) -is:reply -is:retweet -has:videos -has:links'\n",
-    "            self.__agregar_regla_al_stream(f'{query} {filters}')\n",
-    "            self.__agregar_regla_al_stream(f'{query2} {filters}')\n",
-    "            self.__agregar_regla_al_stream(f'{query3} {filters}')\n",
-    "            self.__agregar_regla_al_stream(f'{query4} {filters}')"
+    "query = 'bitcoin OR crypto OR \"blockchain\"'\n",
+    "query2 = '\"ethereum\" OR \"dogecoin\" OR \"cardano\"'\n",
+    "query3 = '\"DOGE\" OR \"XRP\"'\n",
+    "query4 = 'BTC OR ETH'\n",
+    "filters = '(lang:es OR lang:en) -is:reply -is:retweet -has:videos -has:links'\n",
+    "self.__agregar_regla_al_stream(f'{query} {filters}')\n",
+    "self.__agregar_regla_al_stream(f'{query2} {filters}')\n",
+    "self.__agregar_regla_al_stream(f'{query3} {filters}')\n",
+    "self.__agregar_regla_al_stream(f'{query4} {filters}')"
    ]
   },
   {
@@ -285,12 +281,15 @@
     "Como se ve, se guarda en un diccionario el usuario con su user_id en el diccionario user_to_user_id. Allí la clave será el usuario y el valor será un número de identificación único.\n",
     "Por otro lado, se agrega a la lista el par (id_usuario, id_tweet). Luego esta lista es intercalada (por el id_usuario) y se agrupan todos los id_tweets de ese usuario en una lista. De esta forma, si tenemos en el diccionario user_to_user_id:\n",
     "\n",
-    "{\"Juan\": 0,\n",
-    "\"Pedro\" : 1}\n",
+    "```json\n",
+    "{ \"Juan\": 0, \"Pedro\": 1 }\n",
+    "```\n",
     "\n",
     "Si el posting tiene:\n",
     "\n",
+    "```json\n",
     "[\"924\"][\"134\",\"224\",\"341\"]\n",
+    "```\n",
     "\n",
     "Sabremos que Juan publico el tweet 924 y Pedro los tweets 134, 224 y 341, debido a que las listas se encuentran ordenadas y corresponden su posición al user_id de cada uno. Y lo mismo ocurre con los otros indices.\n",
     "\n",
