se actualiza informe

--- a/src/Informe.ipynb
+++ b/src/Informe.ipynb
@@ -9,17 +9,15 @@
     "\n",
     "---\n",
     "\n",
-    "Grupo 4.\n",
+    "<h3 style=\"text-align:center;\">GRUPO 4</h3>\n",
     "\n",
-    "Integrantes:\n",
+    "- Massimino, Agustín\n",
     "\n",
-    "-Massimino, Agustín\n",
+    "- Miguel, Emmanuel\n",
     "\n",
-    "-Miguel, Emmanuel\n",
+    "- Tubio, Kevin\n",
     "\n",
-    "-Tubio, Kevin\n",
-    "\n",
-    "-Caceres Montenegro, Nicolas Benjamin\n"
+    "- Caceres Montenegro, Nicolas Benjamin\n"
    ]
   },
   {
@@ -435,22 +433,6 @@
     "            else:\n",
     "                return aux\n",
     "            "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3508f4d-bf2a-498c-8c86-16cab61786f4",
-   "metadata": {},
-   "source": [
-    "_EXCEPCIONES_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35fed5f8-86c6-4cfb-bf75-d03c6a3d8d8c",
-   "metadata": {},
-   "source": [
-    "Se decidió realizar un manejo de excepciones personalizadas las cuales fueron creadas en el archivo \"excepciones.py\" y las mismas son: OperacionCanceladaException, FechaInvalidaException y TerminoNoEncontradoException"
    ]
   },
   {
